// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MatchDaySection con subtítulo y h3 1`] = `
"
<section aria-labelledby="next-division-i-varonil">
  <header>
    <h3 id="next-division-i-varonil">
      [sr-only]
        "División"
      "DIV."
      "I"
      "Varonil"
      "sábado 26 de septiembre"
    <a href="/division-i-varonil/">
      "Ver más"
      [sr-only]
        "de División IVaronil"
  <ul role="list">
    <li>
      <astro-island client="load">
        <article aria-label="BUAP vs UV">
          <a aria-label="Ver detalle del partido entre BUAP contra UV" href="/division-i-varonil/match/buap-vs-uv-5">
          "SEMANA 2"
          "#0005"
          <dl>
            <dt>
              "Equipos"
            <dd>
              "BUA"
              <a href="/division-i-varonil/teams/buap">
                "BUAP"
              "VS"
              "UV"
              <a href="/division-i-varonil/teams/uv">
                "UV"
            <dt>
              "Fecha"
            <dd>
              <time datetime="2026-09-27T00:00:00.000Z">
                "26/09/2026"
            <dt>
              "Hora"
            <dd>
              "18:00 HRS"
            <dt>
              "Cancha"
            <dd>
              "Por definir"
            <dt>
              "Estado"
            <dd>
              "NO INICIADO"
    <li>
      <astro-island client="load">
        <article aria-label="UV vs TEC. DE MTY (CEM)">
          <a aria-label="Ver detalle del partido entre UV contra TEC. DE MTY (CEM)" href="/division-i-varonil/match/uv-vs-tec-de-mty-cem-3">
          "SEMANA 2"
          "#0003"
          <dl>
            <dt>
              "Equipos"
            <dd>
              "UV"
              <a href="/division-i-varonil/teams/uv">
                "UV"
              "70"
              [sr-only]
                "puntos"
              "–"
              "80"
              [sr-only]
                "puntos"
              "TEC"
              <a href="/division-i-varonil/teams/tec-de-mty-cem">
                "TEC. DE MTY (CEM)"
            <dt>
              "Fecha"
            <dd>
              <time datetime="2026-09-26T16:00:00.000Z">
                "26/09/2026"
            <dt>
              "Hora"
            <dd>
              "10:00 HRS"
            <dt>
              "Cancha"
            <dd>
              <a href="http://maps.google.com/maps?daddr=19.36,-99.16" rel="noopener noreferrer" target="_blank">
                "CENTRO DEPORTIVO COYOACÁN"
                [sr-only]
                  "(abre en una pestaña nueva)"
            <dt>
              "Estado"
            <dd>
              "COMPLETADO"
    <li>
      <astro-island client="load">
        <article aria-label="UP MÉXICO vs BUAP">
          <a aria-label="Ver detalle del partido entre UP MÉXICO contra BUAP" href="/division-i-varonil/match/up-mexico-vs-buap-4">
          "SEMANA 2"
          "#0004"
          <dl>
            <dt>
              "Equipos"
            <dd>
              "UP"
              <a href="/division-i-varonil/teams/up-mexico">
                "UP MÉXICO"
              "30"
              [sr-only]
                "puntos"
              "–"
              "28"
              [sr-only]
                "puntos"
              "BUA"
              <a href="/division-i-varonil/teams/buap">
                "BUAP"
            <dt>
              "Fecha"
            <dd>
              <time datetime="2026-09-26T18:00:00.000Z">
                "26/09/2026"
            <dt>
              "Hora"
            <dd>
              "12:00 HRS"
            <dt>
              "Cancha"
            <dd>
              <a href="http://maps.google.com/maps?daddr=19.36,-99.16" rel="noopener noreferrer" target="_blank">
                "CENTRO DEPORTIVO COYOACÁN"
                [sr-only]
                  "(abre en una pestaña nueva)"
            <dt>
              "Estado"
            <dd>
              "EN CURSO"
"
`;

exports[`SelectDivision marca el torneo activo 1`] = `
"
<select aria-label="Seleccionar división" id="division" name="division">
  <option value="division-i-varonil">
    "Division I - Varonil"
  <option selected="" value="division-ii-femenil-centro">
    "Division II - Centro - Femenil"
"
`;

exports[`TeamSchedule de un equipo 1`] = `
"
<button aria-controls="schedule-panel-proximos" aria-selected="true" id="schedule-tab-proximos" role="tab">
  "Próximos"
  "("
  "3"
  ")"
<button aria-controls="schedule-panel-pasados" aria-selected="false" id="schedule-tab-pasados" role="tab">
  "Pasados"
  "("
  "2"
  ")"
<button hidden="">
  "Restablecer"
<label for="schedule-location">
  "Ubicación"
<select id="schedule-location" name="ubicacion">
  <option value="">
    "Todas las ubicaciones"
  <option value="local">
    "Local"
  <option value="visita">
    "Visita"
<label for="schedule-opponent">
  "Rival"
<select id="schedule-opponent" name="rival">
  <option value="">
    "Todos los rivales"
  <option value="buap">
    "BUAP"
  <option value="tec-de-mty-cem">
    "TEC. DE MTY (CEM)"
  <option value="uv">
    "UV"
[sr-only]
<section>
  <h3>
    "octubre de 2026"
  <ol>
    <li>
      <article aria-label="UV vs UP MÉXICO">
        <a aria-label="Ver detalle del partido UV vs UP MÉXICO" href="/division-i-varonil/match/uv-vs-up-mexico-6">
        "Visita"
        "#0006"
        "UV"
        "en"
        <a href="/division-i-varonil/teams/uv">
          "UV"
        <dl>
          <dt>
            "Fecha"
          <dd>
            <time datetime="2026-10-03T19:00:00.000Z">
              "sáb 3 oct"
          <dt>
            "Cancha"
          <dd>
            <a href="http://maps.google.com/maps?daddr=19.36,-99.16" rel="noopener noreferrer" target="_blank">
              "CENTRO DEPORTIVO COYOACÁN"
              [sr-only]
                "(abre en una pestaña nueva)"
        "Hora"
        <time datetime="2026-10-03T19:00:00.000Z">
          "13:00"
        [sr-only]
          "horas"
    <li>
      <article aria-label="TEC. DE MTY (CEM) vs UP MÉXICO">
        <a aria-label="Ver detalle del partido TEC. DE MTY (CEM) vs UP MÉXICO" href="/division-i-varonil/match/tec-de-mty-cem-vs-up-mexico-7">
        "Visita"
        "#0007"
        "TEC"
        "en"
        <a href="/division-i-varonil/teams/tec-de-mty-cem">
          "TEC. DE MTY (CEM)"
        <dl>
          <dt>
            "Fecha"
          <dd>
            <time datetime="2026-10-04T06:00:00.000Z">
              "dom 4 oct"
          <dt>
            "Cancha"
          <dd>
            <a href="http://maps.google.com/maps?daddr=19.36,-99.16" rel="noopener noreferrer" target="_blank">
              "CENTRO DEPORTIVO COYOACÁN"
              [sr-only]
                "(abre en una pestaña nueva)"
        "Hora"
        <time datetime="2026-10-04T06:00:00.000Z">
          "00:00"
        [sr-only]
          "horas"
    <li>
      <article aria-label="UP MÉXICO vs TEC. DE MTY (CEM)">
        <a aria-label="Ver detalle del partido UP MÉXICO vs TEC. DE MTY (CEM)" href="/division-i-varonil/match/up-mexico-vs-tec-de-mty-cem-8">
        "Local"
        "#0008"
        "TEC"
        "vs"
        <a href="/division-i-varonil/teams/tec-de-mty-cem">
          "TEC. DE MTY (CEM)"
        <dl>
          <dt>
            "Fecha"
          <dd>
            <time datetime="2026-10-10T18:00:00.000Z">
              "sáb 10 oct"
          <dt>
            "Cancha"
          <dd>
            <a href="http://maps.google.com/maps?daddr=19.36,-99.16" rel="noopener noreferrer" target="_blank">
              "CENTRO DEPORTIVO COYOACÁN"
              [sr-only]
                "(abre en una pestaña nueva)"
        "Hora"
        <time datetime="2026-10-10T18:00:00.000Z">
          "12:00"
        [sr-only]
          "horas"
"Ningún partido coincide con los filtros"
<button>
  "Quitar filtros"
<section>
  <h3>
    "septiembre de 2026"
  <ol>
    <li>
      <article aria-label="UP MÉXICO vs BUAP">
        <a aria-label="Ver detalle del partido UP MÉXICO vs BUAP" href="/division-i-varonil/match/up-mexico-vs-buap-4">
        "Local"
        "#0004"
        "BUA"
        "vs · #4 · 0-3"
        <a href="/division-i-varonil/teams/buap">
          "BUAP"
        <dl>
          <dt>
            "Fecha"
          <dd>
            <time datetime="2026-09-26T18:00:00.000Z">
              "sáb 26 sep"
          <dt>
            "Cancha"
          <dd>
            <a href="http://maps.google.com/maps?daddr=19.36,-99.16" rel="noopener noreferrer" target="_blank">
              "CENTRO DEPORTIVO COYOACÁN"
              [sr-only]
                "(abre en una pestaña nueva)"
        "Victoria"
        "Final"
        "30–28"
        [sr-only]
          "puntos"
    <li>
      <article aria-label="UP MÉXICO vs UV">
        <a aria-label="Ver detalle del partido UP MÉXICO vs UV" href="/division-i-varonil/match/up-mexico-vs-uv-1">
        "Local"
        "#0001"
        "UV"
        "vs · #1 · 3-0"
        <a href="/division-i-varonil/teams/uv">
          "UV"
        <dl>
          <dt>
            "Fecha"
          <dd>
            <time datetime="2026-09-18T20:00:00.000Z">
              "vie 18 sep"
          <dt>
            "Cancha"
          <dd>
            <a href="http://maps.google.com/maps?daddr=19.36,-99.16" rel="noopener noreferrer" target="_blank">
              "CENTRO DEPORTIVO COYOACÁN"
              [sr-only]
                "(abre en una pestaña nueva)"
        "Victoria"
        "Final"
        "76–57"
        [sr-only]
          "puntos"
"Ningún partido coincide con los filtros"
<button>
  "Quitar filtros"
"
`;

exports[`TeamSchedule vacío 1`] = `
"
<button aria-controls="schedule-panel-proximos" aria-selected="true" id="schedule-tab-proximos" role="tab">
  "Próximos"
  "("
  "0"
  ")"
<button aria-controls="schedule-panel-pasados" aria-selected="false" id="schedule-tab-pasados" role="tab">
  "Pasados"
  "("
  "0"
  ")"
<button hidden="">
  "Restablecer"
<label for="schedule-location">
  "Ubicación"
<select id="schedule-location" name="ubicacion">
  <option value="">
    "Todas las ubicaciones"
  <option value="local">
    "Local"
  <option value="visita">
    "Visita"
<label for="schedule-opponent">
  "Rival"
<select id="schedule-opponent" name="rival">
  <option value="">
    "Todos los rivales"
[sr-only]
"No hay más partidos por jugar"
"Todavía no hay partidos jugados"
"
`;

exports[`TodayMatches con partidos hoy 1`] = `
"
<astro-island client="load">
<section aria-labelledby="today-matches">
  <h2 id="today-matches">
    "Partidos de hoy"
  <section aria-labelledby="today-division-i-varonil">
    <header>
      <h3 id="today-division-i-varonil">
        [sr-only]
          "División"
        "DIV."
        "I"
        "Varonil"
      <a href="/division-i-varonil/">
        "Ver más"
        [sr-only]
          "de División IVaronil"
    <ul role="list">
      <li>
        <astro-island client="load">
          <article aria-label="UV vs TEC. DE MTY (CEM)">
            <a aria-label="Ver detalle del partido entre UV contra TEC. DE MTY (CEM)" href="/division-i-varonil/match/uv-vs-tec-de-mty-cem-3">
            "SEMANA 2"
            "#0003"
            <dl>
              <dt>
                "Equipos"
              <dd>
                "UV"
                <a href="/division-i-varonil/teams/uv">
                  "UV"
                "70"
                [sr-only]
                  "puntos"
                "–"
                "80"
                [sr-only]
                  "puntos"
                "TEC"
                <a href="/division-i-varonil/teams/tec-de-mty-cem">
                  "TEC. DE MTY (CEM)"
              <dt>
                "Fecha"
              <dd>
                <time datetime="2026-09-26T16:00:00.000Z">
                  "26/09/2026"
              <dt>
                "Hora"
              <dd>
                "10:00 HRS"
              <dt>
                "Cancha"
              <dd>
                <a href="http://maps.google.com/maps?daddr=19.36,-99.16" rel="noopener noreferrer" target="_blank">
                  "CENTRO DEPORTIVO COYOACÁN"
                  [sr-only]
                    "(abre en una pestaña nueva)"
              <dt>
                "Estado"
              <dd>
                "COMPLETADO"
      <li>
        <astro-island client="load">
          <article aria-label="UP MÉXICO vs BUAP">
            <a aria-label="Ver detalle del partido entre UP MÉXICO contra BUAP" href="/division-i-varonil/match/up-mexico-vs-buap-4">
            "SEMANA 2"
            "#0004"
            <dl>
              <dt>
                "Equipos"
              <dd>
                "UP"
                <a href="/division-i-varonil/teams/up-mexico">
                  "UP MÉXICO"
                "30"
                [sr-only]
                  "puntos"
                "–"
                "28"
                [sr-only]
                  "puntos"
                "BUA"
                <a href="/division-i-varonil/teams/buap">
                  "BUAP"
              <dt>
                "Fecha"
              <dd>
                <time datetime="2026-09-26T18:00:00.000Z">
                  "26/09/2026"
              <dt>
                "Hora"
              <dd>
                "12:00 HRS"
              <dt>
                "Cancha"
              <dd>
                <a href="http://maps.google.com/maps?daddr=19.36,-99.16" rel="noopener noreferrer" target="_blank">
                  "CENTRO DEPORTIVO COYOACÁN"
                  [sr-only]
                    "(abre en una pestaña nueva)"
              <dt>
                "Estado"
              <dd>
                "EN CURSO"
      <li>
        <astro-island client="load">
          <article aria-label="BUAP vs UV">
            <a aria-label="Ver detalle del partido entre BUAP contra UV" href="/division-i-varonil/match/buap-vs-uv-5">
            "SEMANA 2"
            "#0005"
            <dl>
              <dt>
                "Equipos"
              <dd>
                "BUA"
                <a href="/division-i-varonil/teams/buap">
                  "BUAP"
                "VS"
                "UV"
                <a href="/division-i-varonil/teams/uv">
                  "UV"
              <dt>
                "Fecha"
              <dd>
                <time datetime="2026-09-27T00:00:00.000Z">
                  "26/09/2026"
              <dt>
                "Hora"
              <dd>
                "18:00 HRS"
              <dt>
                "Cancha"
              <dd>
                "Por definir"
              <dt>
                "Estado"
              <dd>
                "NO INICIADO"
"
`;

exports[`TodayMatches sin partidos hoy cae a la próxima jornada 1`] = `
"
<astro-island client="load">
<section aria-labelledby="next-matches">
  <h2 id="next-matches">
    "Próximos partidos"
  <section aria-labelledby="next-division-ii-femenil-centro">
    <header>
      <h3 id="next-division-ii-femenil-centro">
        [sr-only]
          "División"
        "DIV."
        "II"
        "Femenil"
        "Centro"
        "martes 29 de septiembre"
      <a href="/division-ii-femenil-centro/">
        "Ver más"
        [sr-only]
          "de División IIFemenil"
    <ul role="list">
      <li>
        <astro-island client="load">
          <article aria-label="LOBOS UAdeC vs UAGRO">
            <a aria-label="Ver detalle del partido entre LOBOS UAdeC contra UAGRO" href="/division-ii-femenil-centro/match/lobos-uadec-vs-uagro-2">
            "SEMANA 1"
            "#0002"
            <dl>
              <dt>
                "Equipos"
              <dd>
                "LOB"
                <a href="/division-ii-femenil-centro/teams/lobos-uadec">
                  "LOBOS UAdeC"
                "VS"
                "UAG"
                <a href="/division-ii-femenil-centro/teams/uagro">
                  "UAGRO"
              <dt>
                "Fecha"
              <dd>
                <time datetime="2026-09-29T23:00:00.000Z">
                  "29/09/2026"
              <dt>
                "Hora"
              <dd>
                "17:00 HRS"
              <dt>
                "Cancha"
              <dd>
                <a href="http://maps.google.com/maps?daddr=19.36,-99.16" rel="noopener noreferrer" target="_blank">
                  "CENTRO DEPORTIVO COYOACÁN"
                  [sr-only]
                    "(abre en una pestaña nueva)"
              <dt>
                "Estado"
              <dd>
                "NO INICIADO"
      <li>
        <astro-island client="load">
          <article aria-label="UAGRO vs LOBOS UAdeC">
            <a aria-label="Ver detalle del partido entre UAGRO contra LOBOS UAdeC" href="/division-ii-femenil-centro/match/uagro-vs-lobos-uadec-1">
            "SEMANA 1"
            "#0001"
            <dl>
              <dt>
                "Equipos"
              <dd>
                "UAG"
                <a href="/division-ii-femenil-centro/teams/uagro">
                  "UAGRO"
                "VS"
                "LOB"
                <a href="/division-ii-femenil-centro/teams/lobos-uadec">
                  "LOBOS UAdeC"
              <dt>
                "Fecha"
              <dd>
                <time datetime="2026-09-30T01:30:00.000Z">
                  "29/09/2026"
              <dt>
                "Hora"
              <dd>
                "19:30 HRS"
              <dt>
                "Cancha"
              <dd>
                <a href="http://maps.google.com/maps?daddr=19.36,-99.16" rel="noopener noreferrer" target="_blank">
                  "CENTRO DEPORTIVO COYOACÁN"
                  [sr-only]
                    "(abre en una pestaña nueva)"
              <dt>
                "Estado"
              <dd>
                "NO INICIADO"
  <section aria-labelledby="next-division-i-varonil">
    <header>
      <h3 id="next-division-i-varonil">
        [sr-only]
          "División"
        "DIV."
        "I"
        "Varonil"
        "sábado 3 de octubre"
      <a href="/division-i-varonil/">
        "Ver más"
        [sr-only]
          "de División IVaronil"
    <ul role="list">
      <li>
        <astro-island client="load">
          <article aria-label="UV vs UP MÉXICO">
            <a aria-label="Ver detalle del partido entre UV contra UP MÉXICO" href="/division-i-varonil/match/uv-vs-up-mexico-6">
            "SEMANA 3"
            "#0006"
            <dl>
              <dt>
                "Equipos"
              <dd>
                "UV"
                <a href="/division-i-varonil/teams/uv">
                  "UV"
                "VS"
                "UP"
                <a href="/division-i-varonil/teams/up-mexico">
                  "UP MÉXICO"
              <dt>
                "Fecha"
              <dd>
                <time datetime="2026-10-03T19:00:00.000Z">
                  "03/10/2026"
              <dt>
                "Hora"
              <dd>
                "13:00 HRS"
              <dt>
                "Cancha"
              <dd>
                <a href="http://maps.google.com/maps?daddr=19.36,-99.16" rel="noopener noreferrer" target="_blank">
                  "CENTRO DEPORTIVO COYOACÁN"
                  [sr-only]
                    "(abre en una pestaña nueva)"
              <dt>
                "Estado"
              <dd>
                "NO INICIADO"
"
`;

exports[`TopPerformers 1`] = `
"
<section aria-labelledby="top-division-i-varonil">
  <header>
    <h3 id="top-division-i-varonil">
      [sr-only]
        "División"
      "DIV."
      "I"
      "Varonil"
    <a href="/division-i-varonil/teams/">
      "Tabla →"
  <ol>
    <li>
      <a href="/division-i-varonil/teams/uv">
        <img alt="" src="/logos/AAAAAAAA-AAAA-4AAA-8AAA-000000000001/aaaaaaa2-0000-4000-8000-000000000002.avif">
        "UV"
        "3-0"
        [sr-only]
          "Posición"
        "1"
    <li>
      <a href="/division-i-varonil/teams/up-mexico">
        <img alt="" src="/logos/AAAAAAAA-AAAA-4AAA-8AAA-000000000001/aaaaaaa1-0000-4000-8000-000000000001.avif">
        "UP MÉXICO"
        "1-1"
        [sr-only]
          "Posición"
        "2"
    <li>
      <a href="/division-i-varonil/teams/tec-de-mty-cem">
        "TEC"
        "TEC. DE MTY (CEM)"
        "1-1"
        [sr-only]
          "Posición"
        "3"
<section aria-labelledby="top-division-ii-femenil-centro">
  <header>
    <h3 id="top-division-ii-femenil-centro">
      [sr-only]
        "División"
      "DIV."
      "II"
      "Femenil"
      "· Centro"
    <a href="/division-ii-femenil-centro/teams/">
      "Tabla →"
  "Sin tabla disponible"
"
`;

exports[`WeekMatches: los tres estados; una sede con link inseguro se muestra como "Por definir" (oculta el nombre) 1`] = `
"
<ul role="list">
  <li>
    <astro-island client="load">
      <article aria-label="BUAP vs UV">
        <a aria-label="Ver detalle del partido entre BUAP contra UV" href="/division-i-varonil/match/buap-vs-uv-5">
        "SEMANA 2"
        "#0005"
        <dl>
          <dt>
            "Equipos"
          <dd>
            "BUA"
            <a href="/division-i-varonil/teams/buap">
              "BUAP"
            "VS"
            "UV"
            <a href="/division-i-varonil/teams/uv">
              "UV"
          <dt>
            "Fecha"
          <dd>
            <time datetime="2026-09-27T00:00:00.000Z">
              "26/09/2026"
          <dt>
            "Hora"
          <dd>
            "18:00 HRS"
          <dt>
            "Cancha"
          <dd>
            "Por definir"
          <dt>
            "Estado"
          <dd>
            "NO INICIADO"
  <li>
    <astro-island client="load">
      <article aria-label="UV vs TEC. DE MTY (CEM)">
        <a aria-label="Ver detalle del partido entre UV contra TEC. DE MTY (CEM)" href="/division-i-varonil/match/uv-vs-tec-de-mty-cem-3">
        "SEMANA 2"
        "#0003"
        <dl>
          <dt>
            "Equipos"
          <dd>
            "UV"
            <a href="/division-i-varonil/teams/uv">
              "UV"
            "70"
            [sr-only]
              "puntos"
            "–"
            "80"
            [sr-only]
              "puntos"
            "TEC"
            <a href="/division-i-varonil/teams/tec-de-mty-cem">
              "TEC. DE MTY (CEM)"
          <dt>
            "Fecha"
          <dd>
            <time datetime="2026-09-26T16:00:00.000Z">
              "26/09/2026"
          <dt>
            "Hora"
          <dd>
            "10:00 HRS"
          <dt>
            "Cancha"
          <dd>
            <a href="http://maps.google.com/maps?daddr=19.36,-99.16" rel="noopener noreferrer" target="_blank">
              "CENTRO DEPORTIVO COYOACÁN"
              [sr-only]
                "(abre en una pestaña nueva)"
          <dt>
            "Estado"
          <dd>
            "COMPLETADO"
  <li>
    <astro-island client="load">
      <article aria-label="UP MÉXICO vs BUAP">
        <a aria-label="Ver detalle del partido entre UP MÉXICO contra BUAP" href="/division-i-varonil/match/up-mexico-vs-buap-4">
        "SEMANA 2"
        "#0004"
        <dl>
          <dt>
            "Equipos"
          <dd>
            "UP"
            <a href="/division-i-varonil/teams/up-mexico">
              "UP MÉXICO"
            "30"
            [sr-only]
              "puntos"
            "–"
            "28"
            [sr-only]
              "puntos"
            "BUA"
            <a href="/division-i-varonil/teams/buap">
              "BUAP"
          <dt>
            "Fecha"
          <dd>
            <time datetime="2026-09-26T18:00:00.000Z">
              "26/09/2026"
          <dt>
            "Hora"
          <dd>
            "12:00 HRS"
          <dt>
            "Cancha"
          <dd>
            <a href="http://maps.google.com/maps?daddr=19.36,-99.16" rel="noopener noreferrer" target="_blank">
              "CENTRO DEPORTIVO COYOACÁN"
              [sr-only]
                "(abre en una pestaña nueva)"
          <dt>
            "Estado"
          <dd>
            "EN CURSO"
"
`;
